<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FDFDFD"
    tools:context=".MainActivity"
    tools:ignore="UseSwitchCompatOrMaterialXml">

    <TextView
        android:id="@+id/logoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.069" />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/subtitle"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/logoTextView"
        app:layout_constraintTop_toBottomOf="@+id/logoTextView" />

    <ImageButton
        android:id="@+id/dmImageButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="#FFFFFF"
        app:tint="@color/black"
        android:contentDescription="@string/darkModeButton"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.9"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.077"
        app:srcCompat="@drawable/moon" />

    <TextView
        android:id="@+id/dmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/darkModeText"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/dmImageButton"
        app:layout_constraintTop_toBottomOf="@+id/dmImageButton" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="221dp"
        android:layout_height="59dp"
        app:boxBackgroundColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.242"
        android:textColorHint="@color/white"
        android:hint="@string/hintName">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/nameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/purple"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/nameInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/nameInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/nameInputLayout"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passInputLayout"
        android:layout_width="221dp"
        android:layout_height="59dp"
        app:boxBackgroundColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.363"
        android:hint="@string/hintPassword"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/purple"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/passInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/passInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passInputLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passConfirmInputLayout"
        android:layout_width="221dp"
        android:layout_height="59dp"
        app:boxBackgroundColor="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.731"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.482"
        android:hint="@string/hintPasswordConfirm"
        android:textColorHint="@color/white">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/passConfirmTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:textColor="@color/purple"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/passConfirmInputLayout"
        app:layout_constraintEnd_toStartOf="@+id/passConfirmInputLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/passConfirmInputLayout" />

    <ImageButton
        android:id="@+id/uploadImgImageButton"
        android:layout_width="81dp"
        android:layout_height="67dp"
        android:backgroundTint="@color/black"
        android:contentDescription="@string/image"
        android:scaleType="fitCenter"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.772"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.622"
        app:srcCompat="@android:drawable/ic_menu_gallery" />

    <TextView
        android:id="@+id/uploadPhotoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/photo"
        android:textColor="@color/purple"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/uploadImgImageButton"
        app:layout_constraintEnd_toStartOf="@+id/uploadImgImageButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/uploadImgImageButton"
        app:layout_constraintVertical_bias="0.511" />

    <Switch
        android:id="@+id/allowGeoSwitch"
        android:layout_width="262dp"
        android:layout_height="52dp"
        android:buttonTint="#673AB7"
        android:text="@string/geo"
        android:textColor="@color/purple"
        android:textSize="20sp"
        android:thumbTint="#9F56AD"
        android:trackTint="#7C3989"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.717" />

    <CheckBox
        android:id="@+id/termsNCondCheckBox"
        android:layout_width="320dp"
        android:layout_height="60dp"
        android:text="@string/TermsCond"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.803" />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="132dp"
        android:layout_height="66dp"
        android:text="@string/Register"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.197"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="139dp"
        android:layout_height="66dp"
        android:text="@string/Reset"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.812"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.939" />

</androidx.constraintlayout.widget.ConstraintLayout>